<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.phattarapong.mobilepattern.activity.RegisterActivity">

    <include layout="@layout/layout_tool_bar_simple" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_margin_padding_large">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_register_activity"
                android:orientation="vertical"
                app:errorEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/namePasswordBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textIsSelectable="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastNameTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name_register_activity"
                android:orientation="vertical"
                app:errorEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lastNamePasswordBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textIsSelectable="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_register_activity"
                android:orientation="vertical"
                app:errorEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textIsSelectable="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_register_activity"
                android:orientation="vertical"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textIsSelectable="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPasswordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_pass_register_activity"
                android:orientation="vertical"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmPasswordBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textIsSelectable="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/birthDayTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_birth_day_register_activity"
                android:orientation="vertical"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/birthDayBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textIsSelectable="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_register_activity"
                android:orientation="vertical"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phoneBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textIsSelectable="false" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/default_margin_padding_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_gender_activity" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/default_margin_padding_large">

                    <RadioButton
                        android:id="@+id/maleRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/hint_male_activity" />

                    <RadioButton
                        android:id="@+id/femaleRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_margin_padding_large"
                        android:text="@string/hint_female_activity" />

                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_padding_extra_large"
                android:background="@drawable/shape_btn_blue"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:text="@string/action_submit"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.ButtonNormal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/dark_blue_primary" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
