<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_corner_white"
        android:elevation="5dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dialogTitleLabel"
                    style="@style/TextHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_padding_extra_large"
                    android:breakStrategy="balanced"
                    android:gravity="center"
                    android:text="@string/dialog_notification_title"
                    android:textAppearance="@style/TextAppearance.FontBold" />

                <TextView
                    android:id="@+id/dialogMsgLabel"
                    style="@style/TextBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_padding_normal"
                    android:breakStrategy="balanced"
                    android:gravity="center"
                    android:text="@string/dialog_notification_desc" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_divider"
                android:layout_marginTop="@dimen/default_margin_padding_large"
                android:background="@color/bg_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/denyLabel"
                    style="@style/TextMenuActionBlue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/action_deny"
                    android:textAppearance="@style/TextAppearance.FontBold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/bg_divider" />

                <TextView
                    android:id="@+id/allowLabel"
                    style="@style/TextMenuActionBlue"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/action_allow"
                    android:textAppearance="@style/TextAppearance.FontBold" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>