<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.phattarapong.mobilepattern.activity.FeedBackActivity">

    <include layout="@layout/layout_tool_bar_simple" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_margin_padding_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_padding_normal"
            android:text="@string/msg_topic_header_feed_back_activity"
            android:textAppearance="@style/TextAppearance.FontBold"
            android:textSize="@dimen/default_text_header_large" />

        <EditText
            android:id="@+id/headerBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_padding_normal"
            android:background="@drawable/bg_border"
            android:padding="@dimen/default_margin_padding_normal"
            android:textSize="@dimen/default_text_body_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_padding_normal"
            android:text="@string/msg_topic_desc_feed_back_activity"
            android:textAppearance="@style/TextAppearance.FontBold"
            android:textSize="@dimen/default_text_header_large" />

        <EditText
            android:gravity="start"
            android:id="@+id/descBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_padding_normal"
            android:background="@drawable/bg_border"
            android:lines="10"
            android:maxLines="10"
            android:padding="@dimen/default_margin_padding_normal"
            android:textSize="@dimen/default_text_body_normal" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_padding_normal"
            android:background="@drawable/shape_btn_blue"
            android:text="@string/action_submit"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.ButtonNormal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/dark_blue_primary" />


    </LinearLayout>

</LinearLayout>
