<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.ChangePasswordActivity">

    <include layout="@layout/layout_tool_bar_simple" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<include layout="@layout/layout_error" />-->
        <!--<include layout="@layout/layout_loading" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/extra_extra_light_gray">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textColor="@color/text_gray" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_margin_padding_large">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/oldPasswordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_old_password_change_pass_activity"
                android:orientation="vertical"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/oldPasswordBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textIsSelectable="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/newPasswordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/newPasswordBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/msg_new_password_change_pass_activity"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textIsSelectable="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPasswordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmPasswordBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/msg_confirm_password_change_pass_activity"
                    android:inputType="textPassword"
                    android:textIsSelectable="false" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/changePasswordBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_padding_extra_large"
                android:background="@drawable/shape_btn_blue"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:text="@string/btn_change_change_pass_activity"
                android:textAppearance="@style/TextAppearance.ButtonNormal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/dark_blue_primary" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
